Colaboratory를 통해 생성됨

--- a/Day01.ipynb
+++ b/Day01.ipynb
@@ -13,6 +13,160 @@
     {
       "cell_type": "code",
       "source": [
+        "############## \n",
+        "# 주석 comment\n",
+        "##############\n",
+        "\n",
+        "''' \n",
+        "작성자 : 홍길동\n",
+        "작성일 : 2022-01-25\n",
+        "버전 : 0.1\n",
+        "'''\n",
+        "\n",
+        "\"\"\" \n",
+        "작성자 : 홍길동\n",
+        "작성일 : 2022-01-25\n",
+        "버전 : 0.1\n",
+        "Doc String\n",
+        "\"\"\"\n",
+        "\n",
+        "# 보통 삼중 따옴표 주석은 \n",
+        "# 여러줄을 주석으로 \n",
+        "# 사용할 때 사용한다. \n",
+        "\n",
+        "\n",
+        "# 주석 붙이는 위치 \n",
+        "print(\"Hello World\") # 보통 행의 우측 또는 위에 주석을 붙인다."
+      ],
+      "metadata": {
+        "id": "iPEixh2KNrkM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "############## \n",
+        "# 변수 Variable\n",
+        "##############\n",
+        "\n",
+        "score = 200\n",
+        "\n",
+        "print(score)\n",
+        "\n",
+        "score = 300\n",
+        "\n",
+        "print(score)"
+      ],
+      "metadata": {
+        "id": "ZvREBK1MNw9l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1\n",
+        "A = 2\n",
+        "\n",
+        "print(a)\n",
+        "print(A)"
+      ],
+      "metadata": {
+        "id": "Reud2wj_N4vY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 = 'hi'\n",
+        "print(a1)"
+      ],
+      "metadata": {
+        "id": "pLe0604AN8H9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1a = 'hi'\n",
+        "# print(1a)"
+      ],
+      "metadata": {
+        "id": "ZZXkh2FoN94b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 20\n",
+        "b = 1500\n",
+        "\n",
+        "student_avg = 20\n",
+        "math_sum = 1500"
+      ],
+      "metadata": {
+        "id": "RdbdKFCiN_TQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "############## \n",
+        "# 기본 자료형 type\n",
+        "##############\n",
+        "\n",
+        "a = int(1.9)\n",
+        "print(a)\n",
+        "\n",
+        "b = int(True)\n",
+        "print(b)\n",
+        "\n",
+        "c = int(False)\n",
+        "print(c)"
+      ],
+      "metadata": {
+        "id": "wUE9ze4pOAn3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 100\n",
+        "b = '100'\n",
+        "\n",
+        "print(type(a))\n",
+        "print(type(b))\n",
+        "\n",
+        "print(a)\n",
+        "print(b)\n",
+        "print(a==b)\n",
+        "\n",
+        "c = int(b)\n",
+        "print(type(c))\n",
+        "print(a==c)"
+      ],
+      "metadata": {
+        "id": "eqjhwvYUOFwX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# 실수 float\n",
         "\n",
         "a = float(1)\n",
@@ -29,11 +183,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "sU6Eof9iZzP5",
-        "outputId": "9c11f78d-6320-4d01-dba7-72a31d0a57ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sU6Eof9iZzP5",
+        "outputId": "9c11f78d-6320-4d01-dba7-72a31d0a57ae"
       },
       "execution_count": 8,
       "outputs": [
@@ -67,11 +221,11 @@
         "print(d)"
       ],
       "metadata": {
-        "id": "M-KXBuueaqYh",
-        "outputId": "86776761-104b-4318-dd22-43b51422cc8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "M-KXBuueaqYh",
+        "outputId": "86776761-104b-4318-dd22-43b51422cc8b"
       },
       "execution_count": 7,
       "outputs": [
@@ -106,11 +260,11 @@
         "print(type(c))"
       ],
       "metadata": {
-        "id": "pdpKPsNxbPcd",
-        "outputId": "184c24c7-b3e0-47c8-ca76-2765b966b07f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pdpKPsNxbPcd",
+        "outputId": "184c24c7-b3e0-47c8-ca76-2765b966b07f"
       },
       "execution_count": 10,
       "outputs": [
@@ -143,11 +297,11 @@
         "print(ss[7])"
       ],
       "metadata": {
-        "id": "yr2D7L4cb6d2",
-        "outputId": "bbc45920-25a3-4c3a-abdb-f137ba9b5e14",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yr2D7L4cb6d2",
+        "outputId": "bbc45920-25a3-4c3a-abdb-f137ba9b5e14"
       },
       "execution_count": 15,
       "outputs": [
@@ -171,11 +325,11 @@
         "print(ss[0:10:2])"
       ],
       "metadata": {
-        "id": "ldXR93FgfKGN",
-        "outputId": "1489f943-9d08-4004-d109-b0e0f9f81340",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ldXR93FgfKGN",
+        "outputId": "1489f943-9d08-4004-d109-b0e0f9f81340"
       },
       "execution_count": 19,
       "outputs": [
@@ -201,11 +355,11 @@
         "print(\"Hello \\n'World'\")"
       ],
       "metadata": {
-        "id": "ygNVsnW2gTKE",
-        "outputId": "942a9eaf-2530-4834-8d07-a9b3a9f6a24d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ygNVsnW2gTKE",
+        "outputId": "942a9eaf-2530-4834-8d07-a9b3a9f6a24d"
       },
       "execution_count": 27,
       "outputs": [
@@ -228,11 +382,11 @@
         "print('이름 \\n전화')"
       ],
       "metadata": {
-        "id": "crFDLWXSidWk",
-        "outputId": "98e5254a-055f-4277-ba57-3334300171e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "crFDLWXSidWk",
+        "outputId": "98e5254a-055f-4277-ba57-3334300171e0"
       },
       "execution_count": 28,
       "outputs": [
@@ -253,11 +407,11 @@
         "print('홍길동\\t010-2020-2903')"
       ],
       "metadata": {
-        "id": "4HjB-0dnisJK",
-        "outputId": "0945b006-aa6c-41c9-e89d-4cef131fabc6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4HjB-0dnisJK",
+        "outputId": "0945b006-aa6c-41c9-e89d-4cef131fabc6"
       },
       "execution_count": 30,
       "outputs": [
@@ -277,11 +431,11 @@
         "print('재미있는 ','파이썬')"
       ],
       "metadata": {
-        "id": "Y0sPqKZUjV7J",
-        "outputId": "232079bb-9566-4680-add0-3316c350850c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Y0sPqKZUjV7J",
+        "outputId": "232079bb-9566-4680-add0-3316c350850c"
       },
       "execution_count": 31,
       "outputs": [
@@ -301,11 +455,11 @@
         "print('5점')"
       ],
       "metadata": {
-        "id": "P5BAe7GZjm8j",
-        "outputId": "b64ecf13-ecc5-4816-a275-a03bd5e4dfc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "P5BAe7GZjm8j",
+        "outputId": "b64ecf13-ecc5-4816-a275-a03bd5e4dfc7"
       },
       "execution_count": 33,
       "outputs": [
@@ -328,11 +482,11 @@
         "print('\\n국어\\n영어\\n수학')"
       ],
       "metadata": {
-        "id": "AEBkiMR8juPa",
-        "outputId": "6f08c2fa-34c3-4120-8692-9160c4b03b51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "AEBkiMR8juPa",
+        "outputId": "6f08c2fa-34c3-4120-8692-9160c4b03b51"
       },
       "execution_count": 37,
       "outputs": [
@@ -372,11 +526,11 @@
         "print('저는 %s 입니다.' % std)"
       ],
       "metadata": {
-        "id": "e0RvneMAqRDt",
-        "outputId": "ca6c6d3d-7f8e-4836-9380-a3364c2f8080",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e0RvneMAqRDt",
+        "outputId": "ca6c6d3d-7f8e-4836-9380-a3364c2f8080"
       },
       "execution_count": 49,
       "outputs": [
@@ -407,11 +561,11 @@
         "print(\"%-5d\" % 11)"
       ],
       "metadata": {
-        "id": "1ihtIet4tOAE",
-        "outputId": "93357a3c-eb11-4b25-e82f-0d4ec8c7c61b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1ihtIet4tOAE",
+        "outputId": "93357a3c-eb11-4b25-e82f-0d4ec8c7c61b"
       },
       "execution_count": 52,
       "outputs": [
@@ -436,11 +590,11 @@
         "print('')"
       ],
       "metadata": {
-        "id": "snb-kFlCt-cj",
-        "outputId": "e56f16ea-ee3c-44f7-a284-bdc64a613190",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "snb-kFlCt-cj",
+        "outputId": "e56f16ea-ee3c-44f7-a284-bdc64a613190"
       },
       "execution_count": 55,
       "outputs": [
@@ -464,11 +618,11 @@
         "print(\"내 키는 {}이고 이름은 {}입니다.\".format(height, name))"
       ],
       "metadata": {
-        "id": "6b8HabN5xazQ",
-        "outputId": "4b946c6d-9bae-4e23-a5ce-fb3cd55e10d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6b8HabN5xazQ",
+        "outputId": "4b946c6d-9bae-4e23-a5ce-fb3cd55e10d7"
       },
       "execution_count": 57,
       "outputs": [
@@ -493,11 +647,11 @@
         "print('우편번호 : {}'.format(zipcode))"
       ],
       "metadata": {
-        "id": "rrmLORvIv3gJ",
-        "outputId": "46751535-9e53-4c1d-a56b-444007bf324c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rrmLORvIv3gJ",
+        "outputId": "46751535-9e53-4c1d-a56b-444007bf324c"
       },
       "execution_count": 56,
       "outputs": [
@@ -519,11 +673,11 @@
         "print('My name is {name}. I\\'m {age} years old.'.format(name = 'James',age = 25))"
       ],
       "metadata": {
-        "id": "ZKVj9JAo2M9_",
-        "outputId": "3e3a10f4-e0ba-4d84-84ca-065825130a90",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZKVj9JAo2M9_",
+        "outputId": "3e3a10f4-e0ba-4d84-84ca-065825130a90"
       },
       "execution_count": 59,
       "outputs": [
@@ -549,11 +703,11 @@
         "print(f'{who} make me {how}')"
       ],
       "metadata": {
-        "id": "Uig07gKf21cv",
-        "outputId": "68285c17-e948-4252-9051-40996025c818",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Uig07gKf21cv",
+        "outputId": "68285c17-e948-4252-9051-40996025c818"
       },
       "execution_count": 60,
       "outputs": [
@@ -573,11 +727,11 @@
         "print(f'내년에는 {age+1} 입니다.')"
       ],
       "metadata": {
-        "id": "8BoNIUdM3qS1",
-        "outputId": "d6dd290f-e6af-4efa-e1f4-d21f793247a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8BoNIUdM3qS1",
+        "outputId": "d6dd290f-e6af-4efa-e1f4-d21f793247a6"
       },
       "execution_count": 63,
       "outputs": [
@@ -602,11 +756,11 @@
         "print('당신이 입력한 내용은', n , '입니다.')"
       ],
       "metadata": {
-        "id": "hfi09aap4VZX",
-        "outputId": "36f49697-777a-4864-abf8-b3890f606e20",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hfi09aap4VZX",
+        "outputId": "36f49697-777a-4864-abf8-b3890f606e20"
       },
       "execution_count": 67,
       "outputs": [
@@ -635,11 +789,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "45KSzagX5oTX",
-        "outputId": "516183dd-9722-4fe3-dc8b-88e71a6a6cab",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "45KSzagX5oTX",
+        "outputId": "516183dd-9722-4fe3-dc8b-88e71a6a6cab"
       },
       "execution_count": 73,
       "outputs": [
@@ -668,11 +822,11 @@
         "print(month , '개월 동안 매달 내는 금액은' ,money, '입니다.')"
       ],
       "metadata": {
-        "id": "HnGoQNtz9zUV",
-        "outputId": "7c46aa2d-d6ce-41fa-9e06-929ee3141554",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HnGoQNtz9zUV",
+        "outputId": "7c46aa2d-d6ce-41fa-9e06-929ee3141554"
       },
       "execution_count": 85,
       "outputs": [
@@ -699,11 +853,11 @@
         "print(f'{num1} 과 {num2}의 합계는 {sum}입니다.')"
       ],
       "metadata": {
-        "id": "jBzftmTpFSbx",
-        "outputId": "1c3739a2-ea8f-4308-9ee9-082edabb1d20",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jBzftmTpFSbx",
+        "outputId": "1c3739a2-ea8f-4308-9ee9-082edabb1d20"
       },
       "execution_count": 91,
       "outputs": [
