--- a/Day04.ipynb
+++ b/Day04.ipynb
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c504db87",
+   "id": "c0f7af34",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e80d040c",
+   "id": "c95655e7",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8114d315",
+   "id": "af5f1ecf",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d5dbaadc",
+   "id": "711dc32e",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "eb0430f2",
+   "id": "b3b18975",
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "412953c2",
+   "id": "3bbb357b",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5a563da6",
+   "id": "3ecc38b8",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1e6159ae",
+   "id": "2d33292e",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "eb32cccc",
+   "id": "abced7bb",
    "metadata": {},
    "outputs": [
     {
@@ -211,8 +211,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "f14a0099",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문자열의 길이 구하기\n",
+    "\n",
+    "print(len('안녕하세요'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fb28eeaa",
+   "id": "cad896e8",
    "metadata": {},
    "outputs": [],
    "source": []
