--- a/Algorithm2.ipynb
+++ b/Algorithm2.ipynb
@@ -278,16 +278,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "40fbc94f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6번째 요소가 일치\n"
+     ]
+    }
+   ],
    "source": [
     "# 이진 탐색법의 알고리즘\n",
-    "1. 가운데 요소를 선택\n",
-    "2. 가운데 요소의 데이터와 찾는 데이터를 비교\n",
-    "3. 탐색 범위를 절반으로 줄이는 처리"
+    "# 1. 가운데 요소를 선택\n",
+    "# 2. 가운데 요소의 데이터와 찾는 데이터를 비교\n",
+    "# 3. 탐색 범위를 절반으로 줄이는 처리\n",
+    "\n",
+    "arr = [11, 13, 17, 19, 23, 29, 31]\n",
+    "\n",
+    "def Binary_Search(list0, num): \n",
+    "    head = 0 \n",
+    "    tail = len(list0) - 1\n",
+    "    while True:\n",
+    "        if head <= tail:\n",
+    "            center = int((head + tail) / 2)\n",
+    "            if arr[center] == num:\n",
+    "                print(f'{center}번째 요소가 일치')\n",
+    "                break\n",
+    "            elif arr[center] < num:\n",
+    "                head = center + 1\n",
+    "            else:\n",
+    "                tail = center - 1\n",
+    "        else:\n",
+    "            print('찾지 못했습니다.')\n",
+    "            break\n",
+    "\n",
+    "Binary_Search(arr,31)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82a294f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
